# indigo-smart-contracts

./: .gitignore  .hlint.yaml  LICENSE  README.md  benchmark-results.yaml  cabal-haskell.nix.project  cabal.project  flake.nix  indigo.cabal
.github/workflows/: haskell.yml
format-benchmarks/: Main.hs
hash-checks/: Main.hs
serialise/: Main.hs
src/Indigo/Contracts/: Helpers.hs
src/Indigo/Contracts/CDP/: Common.hs  OnChain.hs
src/Indigo/Contracts/Collector/: Common.hs  OnChain.hs
src/Indigo/Contracts/Governance/Execute/: Common.hs  OnChain.hs
src/Indigo/Contracts/Governance/Gov/: Common.hs  OnChain.hs
src/Indigo/Contracts/Governance/Poll/: Common.hs  OnChain.hs
src/Indigo/Contracts/Governance/VersionRegistry/: Common.hs  OnChain.hs
src/Indigo/Contracts/Liquidity/: Common.hs  OnChain.hs
src/Indigo/Contracts/Oracle/: Common.hs  OnChain.hs
src/Indigo/Contracts/StabilityPool/: Common.hs  OnChain.hs
src/Indigo/Contracts/Staking/: Common.hs  OnChain.hs
src/Indigo/Contracts/Treasury/: Common.hs  OnChain.hs
src/Indigo/Data/: Decimal.hs  Token.hs
src/Indigo/Utils/: Helpers.hs  Spooky.hs  Utils.hs
src/Indigo/Utils/Spooky/: Helpers.hs
tests/: Options.hs  Spec.hs
tests/Spec/: AdaptiveQuorumSpec.hs
tests/Spec/CDP/: Asserts.hs  Benchmark.hs  Helpers.hs  Params.hs  Script.hs  Transactions.hs
tests/Spec/Collector/: Benchmark.hs  Script.hs  Transactions.hs
tests/Spec/Governance/: Benchmark.hs  Helpers.hs  Params.hs  Script.hs  Transactions.hs
tests/Spec/Liquidity/: Benchmark.hs  Helpers.hs  Params.hs  Script.hs  Transactions.hs
tests/Spec/Oracle/: Benchmark.hs  Helpers.hs  Script.hs  Transactions.hs
tests/Spec/StabilityPool/: Benchmark.hs  Helpers.hs  Params.hs  Script.hs  Test.hs  Transactions.hs
tests/Spec/Staking/: Asserts.hs  Benchmark.hs  Helpers.hs  Params.hs  Script.hs  Transactions.hs
tests/Spec/Treasury/: Script.hs
tests/Utils/: Helpers.hs  MintPolicies.hs  Mock.hs
tests/data/: AQB.csv
